# NetEast_BSDiff_Demo2

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/neteast_bsdiff_demo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: bspatch.c  native-lib.cpp
app/src/main/java/com/neteast_bsdiff_demo/: MainActivity.java
app/src/main/java/com/neteast_bsdiff_demo/utils/: UriPareutils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/neteast_bsdiff_demo/: ExampleUnitTest.java
